Single random bomb spawn implemented.  Working on SpawnManager.  Pushing to access on home computer.

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <script src="source/main.js"></script>
     <script src="source/mainScene.js"></script>
     <script src="source/Player.js"></script>
+	<script src="source/Bomb.js"></script>
+	<script src="source/GameManager.js"></script>
 </head>
 <body>
 <div id = 'phaser-game'></div>
