Bomb and bug spawn logic refactored

--- a/index.html
+++ b/index.html
@@ -8,9 +8,12 @@
     <script src="source/main.js"></script>
     <script src="source/mainScene.js"></script>
     <script src="source/Player.js"></script>
-	<script src="source/Bomb.js"></script>
 	<script src="source/GameManager.js"></script>
 	<script src="source/ObjectSpawnManager.js"></script>
+	<script src="source/BombGroup.js"></script>
+	<script src="source/BombObject.js"></script>
+	<script src="source/BugGroup.js"></script>
+	<script src="source/BugObject.js"></script>
 </head>
 <body>
 <div id = 'phaser-game'></div>
