Walls spawning correctly, preliminary logic to have bugs collide with them

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
 	<script src="source/BombObject.js"></script>
 	<script src="source/BugGroup.js"></script>
 	<script src="source/BugObject.js"></script>
+	<script src="source/WallGroup.js"></script>
+	<script src="source/WallObject.js"></script>
 </head>
 <body>
 <div id = 'phaser-game'></div>
