--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 	<script src="source/BugObject.js"></script>
 	<script src="source/WallGroup.js"></script>
 	<script src="source/WallObject.js"></script>
+	<script src="source/Bullet.js"></script>
 </head>
 <body>
 <div id = 'phaser-game'></div>
