--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="">
 <head>
     <meta charset="UTF-8">
-    <title>Game Title Here</title>
+    <title>Undead Bonehead</title>
     <script src="source/phaser.min.js">  
     </script>
     <script src="source/main.js"></script>
