Updated assets and added bonus item functionality

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
 	<script src="source/WallObject.js"></script>
 	<script src="source/ExplosionGroup.js"></script>
 	<script src="source/ExplosionObject.js"></script>
+	<script src="source/BonusGroup.js"></script>
+	<script src="source/BonusObject.js"></script>
 </head>
 <body>
 <div id = 'phaser-game'></div>
