--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
 	<script src="source/ExplosionObject.js"></script>
 	<script src="source/BonusGroup.js"></script>
 	<script src="source/BonusObject.js"></script>
+	<script src="source/TrapGroup.js"></script>
+	<script src="source/TrapObject.js"></script>
 </head>
 <body>
 <div id = 'phaser-game'></div>
